fix: change double to float